--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,19 @@
     background-color: white;
     border: 2px grey solid;
   }
+
+  .big-check-box{
+    position:absolute;
+    left: 0px;
+    top: 0px;
+    width: 30px;
+    height: 30px;
+    z-index: 444;
+    box-shadow: 0px 0px 0px 1px blue;
+  }
+
+
+
   
 
   
